--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,9 @@ serde = "1.0"
 serde_json = "1.0"
 r2d2 = "0.8"
 uuid = { version = "0.6", features = ["serde", "v4"] }
+
+actix-web-httpauth = "0.8.0"
+pwhash = "1"
+hmac = "0.12.1"
+jwt = "0.16.0"
+sha2 = "0.10.6"
