--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ RUST_LOG=rest_api=info,actix=info,diesel_migrations=info
 DATABASE_URL=postgres://postgres:postgres@localhost/notes_api
 HOST=127.0.0.1
 PORT=5000
+JWT_SECRET=supersecretjwt
+HASH_SECRET=supersecrethash
