--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ serde = "1.0"
 serde_json = "1.0"
 r2d2 = "0.8"
 uuid = { version = "0.6", features = ["serde", "v4"] }
-
+jsonwebtoken = "8.2.0"
 actix-web-httpauth = "0.8.0"
 pwhash = "1"
 hmac = "0.12.1"
